[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rankle"
version = "1.0.0"
description = "Web Infrastructure Reconnaissance Tool - 100% Open Source, No API Keys"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Javier Coscolla", email = "javier@example.com"}
]
maintainers = [
    {name = "Javier Coscolla", email = "javier@example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "dnspython>=2.4.0",
    "beautifulsoup4>=4.12.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Operating System :: OS Independent",
]
keywords = [
    "security",
    "reconnaissance",
    "osint",
    "web-security",
    "penetration-testing",
    "bug-bounty",
    "dns",
    "ssl",
    "waf-detection",
    "cdn-detection",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",        # Parallel test execution
    "ruff>=0.8.0",                 # Linting + formatting (replaces black, isort, flake8)
    "mypy>=1.13.0",                # Type checking
    "bandit[toml]>=1.7.10",        # Security scanning
    "pre-commit>=3.8.0",           # Git hooks
    "interrogate>=1.7.0",          # Docstring coverage
    "pip-audit>=2.7.0",            # Dependency vulnerability scanning
]
extended = [
    "python-whois>=0.9.0",
    "ipwhois>=1.2.0",
]

[project.urls]
homepage = "https://github.com/javicosvml/rankle"
documentation = "https://github.com/javicosvml/rankle/blob/main/README.md"
repository = "https://github.com/javicosvml/rankle"
bug-tracker = "https://github.com/javicosvml/rankle/issues"
changelog = "https://github.com/javicosvml/rankle/blob/main/CHANGELOG.md"

[project.scripts]
rankle = "rankle.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rankle*", "config*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
config = ["*.json"]

# =============================================================================
# RUFF - Modern Python linter & formatter (replaces Black, isort, flake8, etc.)
# https://docs.astral.sh/ruff/configuration/
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific rules
    "S",      # flake8-bandit (security)
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
    "FLY",    # flynt
    "PERF",   # Perflint
    "FURB",   # refurb
    "LOG",    # flake8-logging
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function calls in argument defaults
    "C901",    # Too complex
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value comparison
    "S101",    # Use of assert (needed for tests)
    "S311",    # Pseudo-random generators (acceptable for non-crypto)
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Single line implicit string concatenation (conflicts with formatter)
]
# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # Unused arguments allowed in tests
    "PLR2004", # Magic values allowed in tests
]
"examples/**/*.py" = [
    "INP001",  # Implicit namespace packages
    "T201",    # Print statements allowed
    "PTH",     # pathlib usage (os.path OK in examples for simplicity)
    "EXE001",  # Shebang checks
    "PLR0912", # Too many branches (example code can be verbose)
    "PLR0915", # Too many statements (example code can be verbose)
    "PLC0415", # Import not at top (acceptable in examples)
]
"rankle/detectors/**/*.py" = [
    "PLR0912", # Too many branches (detection logic)
    "PLR0915", # Too many statements (detection signatures)
    "PERF401", # List comprehension (readability preferred)
    "PERF403", # Dict comprehension (readability preferred)
    "PLW2901", # Loop variable overwritten (intentional)
]
"rankle/core/**/*.py" = [
    "PLR0912", # Too many branches (orchestration logic)
    "PLR0915", # Too many statements (orchestration logic)
]
"rankle/modules/**/*.py" = [
    "PLR0912", # Too many branches (analysis logic)
    "PLR0915", # Too many statements (analysis logic)
    "PERF401", # List comprehension (readability preferred)
    "PERF403", # Dict comprehension (readability preferred)
    "PLW2901", # Loop variable overwritten (intentional)
    "SIM113",  # Enumerate (manual counter preferred)
    "SIM117",  # Nested with statements (socket+SSL needs separate contexts)
    "DTZ007",  # Naive datetime (SSL cert parsing)
    "PLC0415", # Import inside function (conditional import)
    "SLF001",  # Private member access (internal module usage)
    "RUF005",  # List concatenation (explicit concatenation is clearer for configuration)
]

[tool.ruff.lint.isort]
known-first-party = ["rankle", "config"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.pylint]
max-args = 8

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

# =============================================================================
# MYPY - Static type checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = false          # Enable gradually
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true
ignore_missing_imports = true
exclude = ["tests/", "examples/", "venv/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# =============================================================================
# BANDIT - Security scanning
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "examples"]
skips = [
    "B101",  # assert_used (needed for tests)
    "B110",  # try_except_pass (acceptable in cleanup code)
    "B311",  # random (acceptable for non-crypto purposes)
]

# =============================================================================
# PYTEST - Testing
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=rankle",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=50",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# COVERAGE - Code coverage
# =============================================================================
[tool.coverage.run]
source = ["rankle"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/examples/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# INTERROGATE - Docstring coverage
# =============================================================================
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = true
ignore-nested-functions = true
ignore-nested-classes = true
fail-under = 50
exclude = ["tests", "examples", "venv", ".venv"]
verbose = 0
quiet = false
color = true
